kustomize/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector: 
    app: app
    deployment: deployment
