kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
#  annotations:
#    cert-manager.io/cluster-issuer: acme-example
spec:
  ingressClassName: nginx
  rules:
  - host: example.127-0-0-1.sslip.io # needs sha
    http:
      paths:
      - backend:
          service:
            name: service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls: 
  - hosts:
    - example.127-0-0-1.sslip.io
    # - "*.example.127-0-0-1.sslip.io" # wildcards, probably
    secretName: ingress-tls
